package Control;

public class Constantes {
    public static String total="Total.txt";
}
